# ws63-radio-sys

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  hostap-security-radar.yml  publish.yml
crates/hisi-rf-link/: Cargo.toml  README.md
crates/hisi-rf-link/profiles/: ws63-runtime-compat.toml  ws63-scheduling.toml  ws63-supplicant-boundary.toml  ws63.toml
crates/hisi-rf-link/python/: generate-rom-patch.py  patch-from-oracle.py  patch-reloc.py  test_relocations.py  verify-layout.py
crates/hisi-rf-link/src/: lib.rs  main.rs  native_supplicant.rs  normalize.rs  task_profile.rs
crates/hisi-rf-link/tests/: cli.rs
crates/ws63-radio-blob/: Cargo.toml  LICENSE-BLOB.md  README.md  build.rs
crates/ws63-radio-blob/artifacts/: libbg_common.a.zst  libhisi_wpa_native_port_wpa2.a.zst  libhisi_wpa_native_port_wpa3.a.zst  librom_callback.a.zst  libwifi_alg_anti_interference.a.zst  libwifi_alg_cca_opt.a.zst  libwifi_alg_edca_opt.a.zst  libwifi_alg_temp_protect.a.zst  libwifi_alg_txbf.a.zst  libwifi_driver_dmac.a.zst  libwifi_driver_tcm.a.zst  libwifi_rom_data.a.zst  manifest.json
crates/ws63-radio-blob/src/: lib.rs
crates/ws63-radio-sys/: Cargo.toml  README.md  build.rs
crates/ws63-radio-sys/src/: lib.rs  supplicant.rs
crates/ws63-radio-sys/tests/: profile.rs
include/: hisi_wpa_supplicant.h
linker/: ws63-nvs.x
port/hostap/: dh_groups_hisi.c  driver_ws63.c  driver_ws63.required-symbols  drivers_ws63.c  eloop_hisi_rtos.c  freestanding_hisi.c  hisi_wpa_driver_port.c  hisi_wpa_driver_port.h  hisi_wpa_hostap_compat.h  hisi_wpa_port.c  hisi_wpa_port.h  l2_packet_ws63.c  native-wpa3.required-symbols  native.required-symbols  os_hisi_rtos.c  personal-wpa3.toml  personal.toml  supplicant_ws63.c
scripts/: check-hostap-security-radar.py  check-native-supplicant-port.py  check-release-artifacts.py  check-release-unit.py  check-runtime-compat-profile.py  check-supplicant-boundary-profile.py  check-upstream-hostap.py  check-upstream-personal-vectors.py
tests/: native_supplicant_port.c  upstream_personal_vectors.c
upstream/: hostap-2.11.json
