[package]
name = "hisi-rf-link"
version = "0.1.0-alpha.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Host-side linker and post-link transforms for HiSilicon radio blobs"
license = "MIT"
include = ["src/**", "python/**", "profiles/**", "tests/**", "Cargo.toml", "README.md"]

[[bin]]
name = "hisi-rf-link"
path = "src/main.rs"

[dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
object = { version = "0.37", default-features = false, features = ["elf", "read_core", "std"] }
sha2 = "0.10"
