[package]
name = "hisi-rf-link"
version = "0.1.0-alpha.2"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Host-side linker and post-link transforms for HiSilicon radio blobs"
license = "MIT"
include = ["src/**", "python/**", "profiles/**", "tests/**", "Cargo.toml", "README.md"]

[[bin]]
name = "hisi-rf-link"
path = "src/main.rs"
required-features = ["tool"]

[lib]
name = "hisi_rf_link"
path = "src/lib.rs"

[features]
default = ["tool"]
tool = [
    "dep:object",
    "dep:serde",
    "dep:serde_json",
    "dep:sha2",
    "dep:tempfile",
    "dep:toml",
]

[dependencies]
tempfile = { version = "3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
toml = { version = "0.9", optional = true }
object = { version = "0.37", default-features = false, features = ["elf", "read_core", "std"], optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
