[package]
name = "ws63-radio-sys"
version = "0.1.0-alpha.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Raw ABI and archive-selection contract for WS63 Wi-Fi, BLE, and SLE vendor blobs"
license = "MIT"
links = "ws63_radio_sys"
build = "build.rs"
publish = false

[build-dependencies]
cc = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.9"

[features]
default = ["wifi"]
wifi = []
wpa2-personal = ["wifi"]
wpa3-personal = ["wifi"]
upstream-supplicant-port = []
# Compile the pinned upstream hostap SAE/PMF closure. This does not select the
# legacy vendor WPA3 archives; the Rust integration must provide the explicit
# P-256 and entropy capabilities required by this profile.
upstream-supplicant-wpa3 = ["upstream-supplicant-port"]
ble = []
sle = []
