[package]
name = "ws63-radio-sys"
version = "0.1.0-alpha.3"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Raw ABI and archive-selection contract for WS63 Wi-Fi, BLE, and SLE vendor blobs"
license = "MIT"
readme = "README.md"
links = "ws63_radio_sys"
build = "build.rs"

[build-dependencies]
hisi-rf-link = { path = "../hisi-rf-link", version = "=0.1.0-alpha.3", default-features = false }
object = { version = "0.37", default-features = false, features = ["write"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10", default-features = false }
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }

[dependencies]
hisi-rom-sys-ws63 = "=0.1.0-alpha.1"
ws63-radio-blob = { path = "../ws63-radio-blob", version = "=0.1.0-alpha.3" }

[features]
default = ["wifi"]
wifi = []
wpa2-personal = ["wifi"]
wpa3-personal = ["wifi"]
# Link the Cargo-delivered pinned upstream hostap target archive. Maintainer
# source rebuilds are separate from the consumer build and are not run here.
upstream-supplicant-port = []
# Select the Cargo-delivered SAE/PMF archive. This does not select the legacy
# vendor WPA3 archives; the Rust integration must provide the explicit P-256
# and entropy capabilities required by this profile.
upstream-supplicant-wpa3 = ["upstream-supplicant-port"]
ble = []
sle = []
